# webview-template

./: LICENSE  Makefile  README.md
site/: index.html
site/assets/css/: main.css  webview.css
src/: CMakeLists.txt  main.c
src/helpers/: deps.ps1  deps.sh  pack.ps1  pack.sh  preprocess.py  xxd.py
